--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h1{
   display: inline-block;
   margin-top: 2%;
   margin-bottom: 4%;
+  height: 250px;
 
 }
 
@@ -51,11 +52,15 @@ h2{
 
 p{
   font-size: 20px;
+  align-content: center;
+  margin-left: 5%;
 }
 
 .cardButton{
   width: 60%;
+  height: 20%;
   margin:10px auto;
+  margin-left: 15%;
 
 }
 
